clapi_macros/test_suite/tests/ui/fail/misplace_attribute/command_in_struct_function.stderr
error: custom attribute panicked
 --> $DIR/command_in_struct_function.rs:6:5
  |
6 |     #[command]
  |     ^^^^^^^^^^
  |
  = help: message: `app` is not a top function.
          `command`s must be free functions and be declared outside a module.
